# enterprise-ai-agent-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
agent-config-service/: Dockerfile  pyproject.toml
agent-config-service/app/: config.py  database.py  main.py  metrics.py  policy.py
agent-config-service/app/middleware/: tenant.py
agent-config-service/app/models/: __init__.py  agent.py  agent_version.py  egress_allowlist.py  policy.py  tenant.py  tool.py  tool_binding.py  tool_schema_version.py
agent-config-service/app/routes/: agents.py  egress_policies.py  policies.py  tenants.py  tools.py  versions.py
agent-config-service/app/services/: config_cache.py  config_publisher.py  policy_engine.py
audit-service/: Dockerfile  pyproject.toml
audit-service/app/: config.py  database.py  main.py  metrics.py
audit-service/app/middleware/: tenant.py
audit-service/app/models/: __init__.py  audit.py
audit-service/app/routes/: audit.py
audit-service/app/services/: blob_archiver.py  consumer.py  kafka_consumer.py  metering.py
gateway-service/: Dockerfile  pyproject.toml
gateway-service/app/: config.py  database.py  main.py  metrics.py
gateway-service/app/middleware/: auth.py  rate_limit.py
gateway-service/app/models/: tenant.py
gateway-service/app/routes/: proxy.py  tenants.py
infra/grafana/provisioning/dashboards/: agent_platform.json  dashboard.yml
infra/prometheus/: prometheus.yml
memory-service/: Dockerfile  pyproject.toml
memory-service/app/: config.py  main.py  metrics.py
memory-service/app/middleware/: tenant.py
memory-service/app/models/: memory.py
memory-service/app/routes/: memory.py
memory-service/app/services/: long_term.py  short_term.py
session-service/: Dockerfile  pyproject.toml
session-service/app/: config.py  database.py  main.py  metrics.py
session-service/app/agent/: graph.py  nodes.py  state.py  tools.py
session-service/app/middleware/: tenant.py
session-service/app/models/: __init__.py  session.py
session-service/app/routes/: sessions.py
session-service/app/services/: audit.py  config_client.py  llm.py  memory_client.py
tests/: conftest.py  pyproject.toml  pytest.ini  run_tests.sh  test_01_health.py  test_02_tenants.py  test_03_agents.py  test_04_tools.py  test_05_sessions.py  test_06_memory.py  test_07_audit.py  test_08_e2e_flow.py  test_09_versions.py  test_10_policies.py  test_11_egress.py  test_12_errors.py
web-ui/: package-lock.json  package.json
web-ui/src/: App.tsx  main.tsx
web-ui/src/api/: agents.ts  audit.ts  client.ts  egress.ts  policies.ts  sessions.ts  tools.ts
web-ui/src/components/: Layout.tsx  LoadingSpinner.tsx  MetricCard.tsx  Navbar.tsx  Sidebar.tsx  StatusBadge.tsx
web-ui/src/hooks/: useApiKey.ts
web-ui/src/pages/: AgentDetail.tsx  AgentForm.tsx  Agents.tsx  Dashboard.tsx  EgressAllowlist.tsx  Policies.tsx  SessionDetail.tsx  Sessions.tsx  Settings.tsx  ToolForm.tsx  Tools.tsx
web-ui/src/types/: index.ts
