[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-config-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "asyncpg==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "prometheus-client==0.20.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings==2.2.1",
    "anyio==4.4.0",
]
