[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gateway-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",
    "asyncpg==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "redis==5.0.4",
    "bcrypt==4.1.3",
    "prometheus-client==0.20.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.9",
    "anyio==4.4.0",
]
