[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "redis==5.0.4",
    "qdrant-client==1.9.1",
    "sentence-transformers==2.7.0",
    "prometheus-client==0.20.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings==2.2.1",
    "anyio==4.4.0",
]
