[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "session-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",
    "asyncpg==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "redis==5.0.4",
    "openai==1.30.1",
    "langgraph==0.1.19",
    "langchain-core>=0.2.0,<0.3.0",
    "prometheus-client==0.20.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings==2.2.1",
    "anyio==4.4.0",
    "aiokafka==0.11.0",
]
